--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "getting-started",
+  "name": "iFunny Bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "A discord bot that properly embeds iFunny.co links",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "author": "Shay DeWael",
+  "author": "bruhulance",
   "license": "MIT",
   "dependencies": {
-    "discord-interactions": "^3.2.0",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "node-fetch": "^3.2.3"
+    "jsdom": "^20.0.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.20"
   }
 }
