--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "bruhulance",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^2.11.0",
+    "data-uri-to-buffer": "^4.0.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.0",
+    "image-clipper": "^0.4.4",
     "jsdom": "^20.0.3",
+    "nan": "^2.17.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
