--- a/.prettierrc
+++ b/.prettierrc
@@ -2,10 +2,10 @@
     "trailingComma": "es5",
     "tabWidth": 4,
     "semi": true,
-    "useTabs": true,
+    "useTabs": false,
     "arrowParens": "avoid",
     "endOfLine": "lf",
     "bracketSpacing": true,
     "quoteProps": "consistent",
     "singleQuote": false
-  }
+}
