--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iFunny Bot",
+  "name": "iFunny-Bot",
   "version": "2.0.0",
   "description": "A discord bot that properly embeds iFunny.co links",
   "main": "app.prod.js",
@@ -11,12 +11,14 @@
   "author": "bruhulance",
   "license": "GPL3",
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "data-uri-to-buffer": "^4.0.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.0",
     "jsdom": "^20.0.3",
     "nan": "^2.17.0",
     "npm": "^9.6.2",
+    "prisma": "^5.0.0",
     "request": "^2.88.2",
     "sharp": "^0.32.0"
   },
@@ -24,4 +26,3 @@
     "nodemon": "^2.0.20"
   }
 }
-
