--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ frozenlist==1.4.1
 idna==3.6
 multidict==6.0.5
 pillow==10.2.0
+pyfsig==1.0.0
 python-dotenv==1.0.1
 requests==2.31.0
 soupsieve==2.5
