--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
 attrs==23.2.0
+av==16.1.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 discord.py==2.3.2
 frozenlist==1.4.1
 idna==3.6
+ImageIO==2.37.2
 multidict==6.0.5
+numpy==2.4.2
 pillow==10.2.0
 pyfsig==1.0.0
 python-dotenv==1.0.1
