--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
-aiohttp==3.9.3
-aiosignal==1.3.1
-attrs==23.2.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+attrs==25.4.0
 av==16.1.0
-beautifulsoup4==4.12.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-discord.py==2.3.2
-frozenlist==1.4.1
-idna==3.6
+beautifulsoup4==4.14.3
+certifi==2026.1.4
+charset-normalizer==3.4.4
+discord.py==2.6.4
+frozenlist==1.8.0
+idna==3.11
 ImageIO==2.37.2
-multidict==6.0.5
+multidict==6.7.1
 numpy==2.4.2
-pillow==10.2.0
-pyfsig==1.0.0
-python-dotenv==1.0.1
-requests==2.31.0
-soupsieve==2.5
-urllib3==2.2.1
-yarl==1.9.4
+pillow==12.1.1
+propcache==0.4.1
+pyfsig==1.1.1
+python-dotenv==1.2.1
+requests==2.32.5
+soupsieve==2.8.3
+typing_extensions==4.15.0
+urllib3==2.6.3
+yarl==1.22.0
